...
                            ItemsEvent.Order(ItemOrder.Title(state.itemOrder.orderType))
                        )
                    },
                ) {
                    Icon(
                        imageVector = Icons.Default.SortByAlpha,
                        contentDescription = "Sort by alpha",
                        modifier = Modifier
                            .size(50.dp)
                    )
                }
                IconButton(
                    onClick = {
...
                    onClick = {
                        navController.navigate(Screen.AddEditItemScreen.route)
                    },
                ) {
                    Icon(
                        imageVector = Icons.Default.Add,
                        contentDescription = "Add",
                        modifier = Modifier
                            .size(50.dp)
                    )
                }
            }
            Spacer(modifier = Modifier.height(16.dp))
...
