package com.ipcoding.einkaufsliste.core.util

object TestTags {

    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val NOTE_ITEM = "NOTE_ITEM"
}