...
                IconButton(
                    onClick = { viewModel.onEvent(AddEditItemEvent.SaveItem) },
                    modifier = Modifier
                ) {
                    Icon(
                        imageVector = Icons.Default.Save,
                        contentDescription = "Save",
                        tint = MaterialTheme.colors.onSurface,
                        modifier = Modifier
                            .size(50.dp)
                    )
                }
            }
...
